# freeCash.py

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/freecash.py/: __init__.py
tests/: test_freecash.py.py
